--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "name": "Paul Razvan Berg",
     "url": "https://paulrberg.com"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.0.0"
+  },
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^9.1.2",
@@ -71,6 +73,8 @@
     "prettier": "prettier --config .prettierrc --write \"**/*.{js,json,md,sol,ts}\"",
     "prettier:list-different": "prettier --config .prettierrc --list-different \"**/*.{js,json,md,sol,ts}\"",
     "test": "hardhat test",
-    "typechain": "hardhat typechain"
+    "typechain": "hardhat typechain",
+    "deploy": "npx hardhat run scripts/deploy.ts",
+    "deploy:network": "npx hardhat run scripts/deploy.ts --network"
   }
 }
