--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "prettier:list-different": "prettier --config .prettierrc --list-different \"**/*.{js,json,md,sol,ts}\"",
     "test": "hardhat test",
     "typechain": "hardhat typechain",
-    "deploy": "npx hardhat run scripts/deploy.ts",
+    "deploy": "hardhat run scripts/deploy.ts",
     "deploy:network": "npx hardhat run scripts/deploy.ts --network"
   }
 }
